=============================

*Release date: XX-XXX-XXXX*

Core and builtins
-----------------

- Bug #1590891: random.randrange don't return correct value for big number

- Bug #1456209: In some obscure cases it was possible for a class with a
  custom ``__eq__()`` method to confuse set internals when class instances
  were used as a set's elements and the ``__eq__()`` method mutated the set.

- Eliminated unnecessary repeated calls to hash() by set.intersection() and
  set.symmetric_difference_update().

- Bug #1591996: Correctly forward exception in instance_contains().

- Bug #1588287: fix invalid assertion for `1,2` in debug builds.

- Bug #1576657: when setting a KeyError for a tuple key, make sure that
  the tuple isn't used as the "exception arguments tuple".  Applied to
  both sets and dictionaries.

- Bug #1565514, SystemError not raised on too many nested blocks.

- Bug #1576174: WindowsError now displays the windows error code
  again, no longer the posix error code.

- Patch #1549049: Support long values in structmember.

- Bug #1542016: make sys.callstats() match its docstring and return an
  11-tuple (only relevant when Python is compiled with -DCALL_PROFILE).

- Bug #1545497: when given an explicit base, int() did ignore NULs
  embedded in the string to convert.

- Bug #1569998: break inside a try statement (outside a loop) is now
  recognized and rejected.

- Patch #1542451: disallow continue anywhere under a finally.

- list.pop(x) accepts any object x following the __index__ protocol.

- Fix some leftovers from the conversion from int to Py_ssize_t
  (relevant to strings and sequences of more than 2**31 items).

- A number of places, including integer negation and absolute value,
  were fixed to not rely on undefined behaviour of the C compiler
  anymore.

- Bug #1566800: make sure that EnvironmentError can be called with any
  number of arguments, as was the case in Python 2.4.
